--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   go_router: ^13.1.0
   provider: ^6.1.2
   flutter_svg: ^2.0.7
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
